Output videos of background subtraction (original video + bg mask).

--- a/track/CMakeLists.txt
+++ b/track/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
+set(CMAKE_PREFIX_PATH "/home/josh/local/share")
 find_package(OpenCV REQUIRED)
 set(CMAKE_CXX_FLAGS "-g -Wall")
 
